# Hibiki-Archive

./: .directory  .gitattributes  .gitignore  AUTHORS.txt  Documentation.url  EMSCRIPTEN.txt  HibikiGameEngine.url  LICENSE  NEWS.txt  README.md  THANKS.txt
Assets/: Hibiki.kra
Assets/GUI/: Menu.xml  Pause.xml
Assets/Maps/: TensaiMap.tmx
Assets/Maps/TSX/: 1.tsx  country-platform-back.tsx  country-platform-forest.tsx  country-platform-tiles-example.tsx
Source/: .directory  AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameObject.h  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameStateMachine.cpp  GameStateMachine.h  GlobalVariables.cpp  GlobalVariables.h  InputHandler.cpp  InputHandler.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  ObjectLayer.cpp  ObjectLayer.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  (+9 more)
Source/Factories/: GameObjectFactory.cpp  GameObjectFactory.h
Source/GameObjects/: AnimatedGraphic.cpp  AnimatedGraphic.h  Collider.cpp  Collider.h  CollisionGameObject.cpp  CollisionGameObject.h  DynamicGameObject.cpp  DynamicGameObject.h  Enemy.cpp  Enemy.h  GameObject.h  MenuButton.cpp  MenuButton.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  StaticGameObject.cpp  StaticGameObject.h
Source/Levels/: Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h
Source/Libs/tinyXml/: tinyxml2.h  xmltest.cpp
Source/Managers/: InputManager.cpp  InputManager.h  TextureManager.cpp  TextureManager.h  TextureManagerRWops.cpp
Source/States/: .directory  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MainMenuState.cpp  MainMenuState.h  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  StateParser.cpp  StateParser.h  StateParserRWops.cpp
WebBuild/: index.html  index.js  index.wasm
